--- a/house desgn.html
+++ b/house desgn.html
@@ -82,10 +82,10 @@ footer {
         <nav>
             <ul>
                 <li><a href="C:\Users\harsh\project1.html">Home</a></li>
-                <li><a href="C:\Users\harsh\About.html">About</a></li>
+                <li><a href="About.html">About</a></li>
                 <!-- <li><a href="#">Services</a></li> -->
-                <li><a href="C:\Users\harsh\Portfolio.html">Projects</a></li>
-                <li><a href="C:\Users\harsh\Contact Details.html">Contact</a></li>
+                <li><a href="Portfolio.html">Projects</a></li>
+                <li><a href="Contact Details.html">Contact</a></li>
             </ul>
         </nav>
     </header>
