--- a/Portfolio.html
+++ b/Portfolio.html
@@ -77,11 +77,11 @@ nav ul li {
         <header>
     <nav>
         <ul>
-            <li><a href="C:\Users\harsh\house desgn.html">Home</a></li>
-            <li><a href="C:\Users\harsh\About.html">About</a></li>
+            <li><a href="house desgn.html">Home</a></li>
+            <li><a href="About.html">About</a></li>
             <!-- <li><a href="#">Services</a></li> -->
-            <!-- <li><a href="C:\Users\harsh\Portfolio.html">Portfolio</a></li> -->
-            <li><a href="C:\Users\harsh\Contact Details.html">Contact</a></li>
+            <li><a href="Portfolio.html">Projects</a></li>
+            <li><a href="Contact Details.html">Contact</a></li>
         </ul>
     </nav>
 </header>
