--- a/Portfolio.html
+++ b/Portfolio.html
@@ -93,7 +93,7 @@ nav ul li {
     <main>
         <section class="project">
             <a href="project1.html">
-                <img src="C:\Users\harsh\Downloads\iamge.jpg" alt="Project 1">
+                <img src="iamge.jpg" alt="Project 1">
                 <h2>Project 1</h2>
             </a>
             <p>The goal of this project is to create a web application that automates the process of sharing purchase orders (POs) stored in a Google Sheet with relevant stakeholders. This automation will streamline the PO approval and distribution process, making it more efficient and error-free.
@@ -103,13 +103,13 @@ nav ul li {
         
         
         <section class="project">
-            <img src="C:\Users\harsh\Downloads\iamge.jpg" alt="Project 2">
+            <img src="iamge.jpg" alt="Project 2">
             <h2>Project 2</h2>
             <p>Nulla vitae elit libero, a pharetra augue.</p>
         </section>
 
         <section class="project">
-            <img src="C:\Users\harsh\Downloads\iamge.jpg" alt="Project 3">
+            <img src="iamge.jpg" alt="Project 3">
             <h2>Project 3</h2>
             <p>Sed posuere consectetur est at lobortis.</p>
         </section>
