--- a/About.html
+++ b/About.html
@@ -101,7 +101,7 @@ footer {
 
     <main>
         <section class="profile">
-            <img src="immage.jpeg" alt="Profile Picture">
+            <img src="darshan immage.jpeg" alt="Profile Picture">
             <h2>About page</h2>
             <p>🚀 Building elegant solutions to complex problems 🌐 Full-stack developer | Web Development 🏆 Contribute
             </p>
