--- a/project1.html
+++ b/project1.html
@@ -76,11 +76,9 @@ nav ul li {
 <header>
     <nav>
         <ul>
-            <!-- <li><a href="C:\Users\harsh\house desgn.html">Home</a></li> -->
-            <li><a href="C:\Users\harsh\About.html">About</a></li>
-            <!-- <li><a href="#">Services</a></li> -->
-            <li><a href="C:\Users\harsh\Portfolio.html">Projects</a></li>
-            <li><a href="C:\Users\harsh\Contact Details.html">Contact</a></li>
+        
+            <li><a href="Portfolio.html">Projects</a></li>
+            <li><a href="Contact Details.html">Contact</a></li>
         </ul>
     </nav>
 </header>
